# cpplearn

ConsoleApplication4/: ConsoleApplication4.sln
ConsoleApplication4/ConsoleApplication4/: ConsoleApplication4.cpp  ConsoleApplication4.vcxproj  ConsoleApplication4.vcxproj.filters  enumTest.h
cpplearn/: cpplearn.sln  markdown.md  plantuml.puml
cpplearn/QuiKPlatform/: CMakeLists.txt  CoreManTarget.cpp  CoreManTarget.h  main.cpp
cpplearn/cmake/: CMakeLists.txt  future.cpp  smart_pointer.cpp
cpplearn/cpplearn/: castTest.h  cpplearn.cpp  cpplearn.vcxproj  cpplearn.vcxproj.filters  designPattern.h
cpplearn/libevent_udp/: CMakeLists.txt  main.cpp  udp_multicast.cpp  udp_multicast.h
cpplearn/libevent_udp/libevent/lib/: libevent.lib  libeventd.lib
cpplearn/qt_widget/: CMakeLists.txt  KillOffice.cpp  KillOffice.h  copyDirFile.cpp  copyDirFile.h  fileHelper.cpp  fileHelper.h  load_font.h  main.cpp
cpplearn/qt_word/: CMakeLists.txt  qt_word.cpp  word_operator.cpp  word_operator.h
csharp/: hello.cs
java/: java.java
python/: hello.py
